Pre Launch Bug Fixes and Tweaks
Removed unneeded comments from the PR.
Changed Lustrous Moxie, Earthshatter and Glimmerstep to use Chronos' more efficient use method.
chronosacaria is now an author within fabric.mod.json
Molten Flare's right click now forces an eruption to occur.
Grandfrost's right click no longer goes on cooldown if used with only teammates nearby.
Fixed Scarab Roller and Ruyi Jingu Bang from doing nothing when right clicked with.
Viper's Call's Chakram no longer hits its owner.
Timekeeper's night right click now triggers from the player's feet, not from their eyeline.
Matterbane rift's now connect correctly to entities within its range with particles.
Serpentine Valour no longer crashes the game if it is spawned nearby a target.
Lustrous Moxie no longer crashes the game if being used without a valid target.
Lustrous Moxie no longer hits the user, nor their teammates.
Removed the overwritten addAttributeModifiers method from status effects to prevent an erroneous behaviour.
Effects now have set, individual UUIDs to prevent erroneous behaviour
Moved ModRecipes to the registry package and renamed it to conform to other classes within that package.
Glimmerstep no longer instantly teleports the user as soon as it is used, opposed to when it is fully held down.
Added parameter "isAllowJokeUniques" to the lootTableContents method to check whether joke uniques can appear in the loot table instead of using loot.isEnableJokeUniqueBossLoot() for defining this behaviour in all contexts.
Changed the appendTooltip method of RuneCarverItem to use an if else statement instead of a switch statement.
Removed enableWitherDropsUniques and enableEnderDragonDropsUniques configs in favour of witherUniqueWeight and enderDragonUniqueWeight.
Buffed the chance of an idol weapon causing their on-hit effect from 10% to 15%
Changed simplyMore$IdolUseEffects to trigger on the player and teammates if a positive effect is used, and the inverse if a negative effect is used.
Change

--- a/src/main/resources/assets/simplymore/lang/en_us.json
+++ b/src/main/resources/assets/simplymore/lang/en_us.json
@@ -25,9 +25,9 @@
   "item.simplymore.runefused_carver": "Runefused Carver",
   "item.simplymore.netherfused_carver": "Netherfused Carver",
   "item.simplymore.runefused_carver.tooltip1": "Can be used to form a rune socket",
-  "item.simplymore.runefused_carver.tooltip2": "on a unique weapon that doesnt have it.",
+  "item.simplymore.runefused_carver.tooltip2": "on a unique weapon that doesn't have it.",
   "item.simplymore.netherfused_carver.tooltip1": "Can be used to form a nether socket",
-  "item.simplymore.netherfused_carver.tooltip2": "on a unique weapon that doesnt have it.",
+  "item.simplymore.netherfused_carver.tooltip2": "on a unique weapon that doesn't have it.",
 
   "item.simplymore.iron_great_katana": "Iron Great Katana",
   "item.simplymore.gold_great_katana": "Gold Great Katana",
@@ -112,7 +112,7 @@
   "item.simplymore.mimicry": "Mimi-cry",
   "item.simplymore.mimicry_purity.tooltip1": "Purity Form",
   "item.simplymore.mimicry_twisted.tooltip1": "Twisted Form",
-  "item.simplymore.mimicry.tooltip2": "Unique Effect: Murmers of a Thousand",
+  "item.simplymore.mimicry.tooltip2": "Unique Effect: Murmurs of a Thousand",
   "item.simplymore.mimicry_purity.tooltip3": "Every fifth hit will grant a random buff.",
   "item.simplymore.mimicry_twisted.tooltip3": "Every fourth hit will inflict a random debuff.",
   "item.simplymore.mimicry_purity.tooltip4": "Switch to the Twisted Form.",
@@ -179,7 +179,7 @@
   "item.simplymore.vipers_call": "Viper's Call",
   "item.simplymore.vipers_call.tooltip1": "Unique Effect: Unending Venom",
   "item.simplymore.vipers_call.tooltip2": "While held, status effects that run out stay",
-  "item.simplymore.vipers_call.tooltip3": "active until you unequip the weapon, albiet",
+  "item.simplymore.vipers_call.tooltip3": "active until you unequip the weapon, albeit",
   "item.simplymore.vipers_call.tooltip4": "at its weakest level.",
   "item.simplymore.vipers_call.tooltip5": "This effect only occurs if held in the",
   "item.simplymore.vipers_call.tooltip6": "mainhand.",
@@ -248,7 +248,7 @@
   "item.simplymore.smouldering_ruin.tooltip4": "additional level of it.",
   "item.simplymore.smouldering_ruin.tooltip5": "Jump backwards and turn into mist.",
   "item.simplymore.smouldering_ruin.tooltip6": "If there is a target within 10 blocks",
-  "item.simplymore.smouldering_ruin.tooltip7": "infront of you, teleport to them, leaving",
+  "item.simplymore.smouldering_ruin.tooltip7": "in front of you, teleport to them, leaving",
   "item.simplymore.smouldering_ruin.tooltip8": "a slash that inflicts Withering Fate.",
   "item.simplymore.smouldering_ruin.tooltip9": "The target gains a higher level of Withering",
   "item.simplymore.smouldering_ruin.tooltip10": "fate the higher its maximum hp.",
@@ -285,7 +285,7 @@
   "item.simplymore.ascended_idol.tooltip3": "creating an aura of purity in which",
   "item.simplymore.ascended_idol.tooltip4": "you gain regeneration and have",
   "item.simplymore.ascended_idol.tooltip5": "negative effects cured.",
-  "item.simplymore.ascended_idol.tooltip6": "An enlightend power harmonizes within.",
+  "item.simplymore.ascended_idol.tooltip6": "An enlightened power harmonizes within.",
 
   "item.simplymore.holylight": "Holylight",
   "item.simplymore.holylight.tooltip1": "Unique Effect: Blessed",
@@ -314,6 +314,7 @@
   "item.simplymore.darksent.tooltip6": "Curse all enemies nearby for a short",
   "item.simplymore.darksent.tooltip7": "duration. Cursed enemies are blinded and",
   "item.simplymore.darksent.tooltip8": "slowed heavily upon taking damage.",
+  "item.simplymore.darksent.tooltip9": "Cursed enemies also take 1.5x damage.",
 
   "item.simplymore.boas_fang": "Boa's Fang",
   "item.simplymore.boas_fang.tooltip1": "Unique Effect: Deadly Embrace",
@@ -352,7 +353,7 @@
   "item.simplymore.earthshatter.tooltip5": "This effect stacks.",
   "item.simplymore.earthshatter.tooltip6": "After a short charge, slam downwards, shattering the ",
   "item.simplymore.earthshatter.tooltip7": "ground around you, causing those hit to be launched,",
-  "item.simplymore.earthshatter.tooltip8": "weakened, slowed and inflcited with armor crunch",
+  "item.simplymore.earthshatter.tooltip8": "weakened, slowed and inflicted with armor crunch.",
 
   "item.simplymore.serpentine_valour": "Serpentine Valour",
   "item.simplymore.serpentine_valour.tooltip1": "Unique Effect: Fatal Strike",
