Split english translations into en_us and en_gb to fix inconsistencies

--- a/src/main/resources/assets/simplymore/lang/en_gb.json
+++ b/src/main/resources/assets/simplymore/lang/en_gb.json
@@ -20,7 +20,7 @@
   "effect.simplymore.constricted": "Constricted",
   "effect.simplymore.radiant_mark": "Radiant Mark",
   "effect.simplymore.soul_lock": "Soul Lock",
-  "effect.simplymore.armor_crunch": "Armor Crunch",
+  "effect.simplymore.armor_crunch": "Armour Crunch",
 
   "item.simplymore.runefused_carver": "Runefused Carver",
   "item.simplymore.netherfused_carver": "Netherfused Carver",
@@ -231,8 +231,8 @@
   "item.simplymore.matterbane.color_yellow": "Yellow",
   "item.simplymore.matterbane.color_lime": "Lime",
   "item.simplymore.matterbane.color_pink": "Pink",
-  "item.simplymore.matterbane.color_gray": "Gray",
-  "item.simplymore.matterbane.color_light_gray": "Light Gray",
+  "item.simplymore.matterbane.color_gray": "Grey",
+  "item.simplymore.matterbane.color_light_gray": "Light Grey",
   "item.simplymore.matterbane.color_cyan": "Cyan",
   "item.simplymore.matterbane.color_purple": "Purple",
   "item.simplymore.matterbane.color_blue": "Blue",
@@ -241,7 +241,7 @@
   "item.simplymore.matterbane.color_red": "Red",
   "item.simplymore.matterbane.color_black": "Black",
 
-  "item.simplymore.smouldering_ruin": "Smoldering Ruin",
+  "item.simplymore.smouldering_ruin": "Smouldering Ruin",
   "item.simplymore.smouldering_ruin.tooltip1": "Unique Effect: Doomsayer",
   "item.simplymore.smouldering_ruin.tooltip2": "Chance on hit to inflict wither. If",
   "item.simplymore.smouldering_ruin.tooltip3": "the target has Withering Fate, add an",
@@ -348,14 +348,14 @@
   "item.simplymore.earthshatter": "Earthshatter",
   "item.simplymore.earthshatter.tooltip1": "Unique Effect: Shattering Edge",
   "item.simplymore.earthshatter.tooltip2": "This weapon breaks shields.",
-  "item.simplymore.earthshatter.tooltip3": "Chance on hit to inflict Armor Crunch,",
-  "item.simplymore.earthshatter.tooltip4": "making an opponent's armor less effective",
+  "item.simplymore.earthshatter.tooltip3": "Chance on hit to inflict Armour Crunch,",
+  "item.simplymore.earthshatter.tooltip4": "making an opponent's armour less effective",
   "item.simplymore.earthshatter.tooltip5": "This effect stacks.",
   "item.simplymore.earthshatter.tooltip6": "After a short charge, slam downwards, shattering the ",
   "item.simplymore.earthshatter.tooltip7": "ground around you, causing those hit to be launched,",
-  "item.simplymore.earthshatter.tooltip8": "weakened, slowed and inflicted with armor crunch.",
+  "item.simplymore.earthshatter.tooltip8": "weakened, slowed and inflicted with armour crunch.",
 
-  "item.simplymore.serpentine_valour": "Serpentine Valor",
+  "item.simplymore.serpentine_valour": "Serpentine Valour",
   "item.simplymore.serpentine_valour.tooltip1": "Unique Effect: Fatal Strike",
   "item.simplymore.serpentine_valour.tooltip2": "This weapon deals 4 additional damage if",
   "item.simplymore.serpentine_valour.tooltip3": "the target has poison or venom.",
