--- a/src/main/resources/assets/simplymore/lang/en_gb.json
+++ b/src/main/resources/assets/simplymore/lang/en_gb.json
@@ -262,7 +262,7 @@
   "item.simplymore.stasis.tooltip5": "The lightning does not hurt you.",
 
   "item.simplymore.tidebreaker": "Tidebreaker",
-  "item.simplymore.tidebreaker.tooltip1": "Unique Effect: Drowned God’s Favor",
+  "item.simplymore.tidebreaker.tooltip1": "Unique Effect: Drowned God’s Favour",
   "item.simplymore.tidebreaker.tooltip2": "Chance on hit to cause rainfall around you",
   "item.simplymore.tidebreaker.tooltip3": "which inflicts insanity. Insanity causes random",
   "item.simplymore.tidebreaker.tooltip4": "head movements, weakness and slowness.",
