Update 1.0.2 - Ruyi Jingu Bang's slam attack is now much quieter. - Fixed a few server/client desync bugs with scarab roller that caused lag, inconsistent behaiviour and an overall poor feel. - Added config options for each unique effects. - Fixed various tooltip typos. - Further fixed british spellings being used in the en_us translation, and vice versa. - Uniques now have particle effects, which was meant to be already added, but was broken. - Increased the size of khopeshes in item frames and on the floor.

--- a/src/main/resources/assets/simplymore/lang/en_us.json
+++ b/src/main/resources/assets/simplymore/lang/en_us.json
@@ -99,7 +99,7 @@
   "item.simplymore.molten_flare.tooltip1": "Unique Effect: Smoking Execution",
   "item.simplymore.molten_flare.tooltip2": "Chance on hit to erupt damaging lava around you.",
   "item.simplymore.molten_flare.tooltip3": "Empower your next swing, causing it",
-  "item.simplymore.molten_flare.tooltip4": "to swing twice as fast and erupt with",
+  "item.simplymore.molten_flare.tooltip4": "to swing much faster and erupt with",
   "item.simplymore.molten_flare.tooltip5": "more ferocity.",
 
   "item.simplymore.grandfrost": "Grandfrost",
@@ -113,8 +113,8 @@
   "item.simplymore.mimicry_purity.tooltip1": "Purity Form",
   "item.simplymore.mimicry_twisted.tooltip1": "Twisted Form",
   "item.simplymore.mimicry.tooltip2": "Unique Effect: Murmurs of a Thousand",
-  "item.simplymore.mimicry_purity.tooltip3": "Every fifth hit will grant a random buff.",
-  "item.simplymore.mimicry_twisted.tooltip3": "Every fourth hit will inflict a random debuff.",
+  "item.simplymore.mimicry_purity.tooltip3": "Every %s hits will grant a random buff.",
+  "item.simplymore.mimicry_twisted.tooltip3": "Every %s hits will inflict a random debuff.",
   "item.simplymore.mimicry_purity.tooltip4": "Switch to the Twisted Form.",
   "item.simplymore.mimicry_twisted.tooltip4": "Switch to the Purity Form.",
 
@@ -122,14 +122,14 @@
   "item.simplymore.glimmerstep.tooltip1": "Unique Effect: Shining Aspect",
   "item.simplymore.glimmerstep.tooltip2": "Chance on hit to blind the opponent.",
   "item.simplymore.glimmerstep.tooltip3": "This chance is much higher when mounted.",
-  "item.simplymore.glimmerstep.tooltip4": "Wind up for 3 seconds before teleporting towards your cursor.",
-  "item.simplymore.glimmerstep.tooltip5": "This ability has a range maximum of 30 blocks.",
+  "item.simplymore.glimmerstep.tooltip4": "Wind up for %s seconds before teleporting towards your cursor.",
+  "item.simplymore.glimmerstep.tooltip5": "This ability has a range maximum of %s blocks.",
 
   "item.simplymore.the_blood_harvester": "The Blood Harvester",
   "item.simplymore.the_blood_harvester.tooltip1": "Unique Effect: Blood Sense",
-  "item.simplymore.the_blood_harvester.tooltip2": "This weapon has 10% lifesteal.",
-  "item.simplymore.the_blood_harvester.tooltip3": "Enter a harvest for 15 seconds. While inside of a harvest,",
-  "item.simplymore.the_blood_harvester.tooltip4": "this weapon gains 20% lifesteal, you gain speed and haste,",
+  "item.simplymore.the_blood_harvester.tooltip2": "This weapon has %s lifesteal.",
+  "item.simplymore.the_blood_harvester.tooltip3": "Enter a harvest for %s seconds. While inside of a harvest,",
+  "item.simplymore.the_blood_harvester.tooltip4": "this weapon gains %s lifesteal, you gain speed and haste,",
   "item.simplymore.the_blood_harvester.tooltip5": "you begin to inflict wither, and you can sniff out",
   "item.simplymore.the_blood_harvester.tooltip6": "other entities nearby.",
 
@@ -159,18 +159,18 @@
 
   "item.simplymore.the_vessel_breach": "The Vessel Breach",
   "item.simplymore.the_vessel_breach.tooltip1": "Unique Effect: Blood Purger",
-  "item.simplymore.the_vessel_breach.tooltip2": "This weapon has 10% lifesteal.",
-  "item.simplymore.the_vessel_breach.tooltip3": "Cut yourself for 30% of your health to",
+  "item.simplymore.the_vessel_breach.tooltip2": "This weapon has %s lifesteal.",
+  "item.simplymore.the_vessel_breach.tooltip3": "Cut yourself for %s of your health to",
   "item.simplymore.the_vessel_breach.tooltip4": "enter a rage. While enraged, you bleed",
   "item.simplymore.the_vessel_breach.tooltip5": "but may not take damage otherwise.",
-  "item.simplymore.the_vessel_breach.tooltip6": "You also gain 28% lifesteal and a damage",
+  "item.simplymore.the_vessel_breach.tooltip6": "You also gain %s lifesteal and a damage",
   "item.simplymore.the_vessel_breach.tooltip7": "increase.",
 
   "item.simplymore.blade_of_the_grotesque": "Blade of the Grotesque",
   "item.simplymore.blade_of_the_grotesque.tooltip1": "Unique Effect: False Appearance",
-  "item.simplymore.blade_of_the_grotesque.tooltip2": "While held gain slight armour and",
+  "item.simplymore.blade_of_the_grotesque.tooltip2": "While held gain slight armor and",
   "item.simplymore.blade_of_the_grotesque.tooltip3": "knockback resistance.",
-  "item.simplymore.blade_of_the_grotesque.tooltip4": "Solidify for 2 seconds, during which you may not",
+  "item.simplymore.blade_of_the_grotesque.tooltip4": "Solidify for %s seconds, during which you may not",
   "item.simplymore.blade_of_the_grotesque.tooltip5": "attack nor move, but gain extra defense.",
   "item.simplymore.blade_of_the_grotesque.tooltip6": "Stun anyone who hits you during this time",
   "item.simplymore.blade_of_the_grotesque.tooltip7": "leaving them unable to attack or move for",
@@ -221,7 +221,7 @@
   "item.simplymore.matterbane.tooltip4": "10 blocks. These enemies glow, are slowed",
   "item.simplymore.matterbane.tooltip5": "and are pulled back if they attempt",
   "item.simplymore.matterbane.tooltip6": "to leave the rift's range.",
-  "item.simplymore.matterbane.tooltip7": "Rifts disappear after 15 seconds of if you",
+  "item.simplymore.matterbane.tooltip7": "Rifts disappear after 15 seconds or if you",
   "item.simplymore.matterbane.tooltip8": "move 15 blocks away.",
   "item.simplymore.matterbane.tooltip9": "Dye Color: ",
   "item.simplymore.matterbane.color_white": "White",
@@ -231,8 +231,8 @@
   "item.simplymore.matterbane.color_yellow": "Yellow",
   "item.simplymore.matterbane.color_lime": "Lime",
   "item.simplymore.matterbane.color_pink": "Pink",
-  "item.simplymore.matterbane.color_gray": "Gray",
-  "item.simplymore.matterbane.color_light_gray": "Light Gray",
+  "item.simplymore.matterbane.color_gray": "Grey",
+  "item.simplymore.matterbane.color_light_gray": "Light Grey",
   "item.simplymore.matterbane.color_cyan": "Cyan",
   "item.simplymore.matterbane.color_purple": "Purple",
   "item.simplymore.matterbane.color_blue": "Blue",
@@ -268,7 +268,7 @@
   "item.simplymore.tidebreaker.tooltip4": "head movements, weakness and slowness.",
   "item.simplymore.tidebreaker.tooltip5": "Manifest insanity, causing the last person you hit",
   "item.simplymore.tidebreaker.tooltip6": "to swap places with you, provided you hit them within",
-  "item.simplymore.tidebreaker.tooltip7": "the last 10 seconds and they are within 15 blocks.",
+  "item.simplymore.tidebreaker.tooltip7": "the last %s seconds and they are within %s blocks.",
 
   "item.simplymore.ruyi_jingu_bang": "Ruyi Jingu Bang",
   "item.simplymore.ruyi_jingu_bang.tooltip1": "Unique Effect: The Monkey King",
@@ -295,7 +295,7 @@
   "item.simplymore.holylight.tooltip5": "negative effects cured.",
   "item.simplymore.holylight.tooltip6": "Grant you and all allies nearby a short",
   "item.simplymore.holylight.tooltip7": "blessing. If you take damage while it is active,",
-  "item.simplymore.holylight.tooltip8": "nullify it and heal 2 hearts instead.",
+  "item.simplymore.holylight.tooltip8": "nullify it and heal for %s hearts instead.",
 
   "item.simplymore.tarnished_idol": "Tarnished Idol",
   "item.simplymore.tarnished_idol.tooltip1": "Unique Effect: Accursed",
@@ -314,7 +314,7 @@
   "item.simplymore.darksent.tooltip6": "Curse all enemies nearby for a short",
   "item.simplymore.darksent.tooltip7": "duration. Cursed enemies are blinded and",
   "item.simplymore.darksent.tooltip8": "slowed heavily upon taking damage.",
-  "item.simplymore.darksent.tooltip9": "Cursed enemies also take 1.5x damage.",
+  "item.simplymore.darksent.tooltip9": "Cursed enemies also take %s damage.",
 
   "item.simplymore.boas_fang": "Boa's Fang",
   "item.simplymore.boas_fang.tooltip1": "Unique Effect: Deadly Embrace",
@@ -341,7 +341,7 @@
   "item.simplymore.soul_foreseer.tooltip2": "Chance on hit to steal and judge an",
   "item.simplymore.soul_foreseer.tooltip3": "enemy's soul. While the target is without",
   "item.simplymore.soul_foreseer.tooltip4": "their soul, positive effects are drained much",
-  "item.simplymore.soul_foreseer.tooltip5": "faster. After 8 seconds, their soul is returned.",
+  "item.simplymore.soul_foreseer.tooltip5": "faster. After %s seconds, their soul is returned.",
   "item.simplymore.soul_foreseer.tooltip6": "Return a target's soul prematurely, blinding,",
   "item.simplymore.soul_foreseer.tooltip7": "slowing and teleporting them to you.",
 
@@ -349,7 +349,7 @@
   "item.simplymore.earthshatter.tooltip1": "Unique Effect: Shattering Edge",
   "item.simplymore.earthshatter.tooltip2": "This weapon breaks shields.",
   "item.simplymore.earthshatter.tooltip3": "Chance on hit to inflict Armor Crunch,",
-  "item.simplymore.earthshatter.tooltip4": "making an opponent's armor less effective",
+  "item.simplymore.earthshatter.tooltip4": "making an opponent's armor less effective.",
   "item.simplymore.earthshatter.tooltip5": "This effect stacks.",
   "item.simplymore.earthshatter.tooltip6": "After a short charge, slam downwards, shattering the ",
   "item.simplymore.earthshatter.tooltip7": "ground around you, causing those hit to be launched,",
